name:                schnauze
version:             0.1.0.0
synopsis:            Another Scheme interpreter
homepage:            https://github.com/benjaminfjones/schnauze
license:             MIT
license-file:        LICENSE
author:              Benjamin Jones
maintainer:          benjaminfjones@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:     Lang.Scheme
                     , Lang.Scheme.AST
                     , Lang.Scheme.Eval
                     , Lang.Scheme.Parser
                     , Lang.Scheme.Printer
                     , Lang.Scheme.REPL
  build-depends:       base >=4.11 && <4.12
                     , parsec >= 3.1 && < 4
                     , s-cargot >= 0.1.4.0 && < 1.5
                     , text >= 1.2 && < 2
  hs-source-dirs:      src
  default-language:    Haskell2010
